# easygen

./: README.md  pyproject.toml  setup.py
easygen/: license_generator.py  license_validator.py  utils.py
tests/: test_expired_license.py  test_modified_hwid.py  test_modified_signature.py  test_valid_license.py
